# silhouette-card-maker

./: !GUI_mtg_deck.py  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  TESTING_GUIDE.md  TODO.md  _output.lnk  add_blank.py  batch_convert_studio3.py  calibration.py  clean_up.py  cleanup.py  create_pdf.py  create_pdf_full.py  create_test_image.py  desktop.ini  dxf_manager.py  dxf_to_studio3.py  enums.py  generate_calibration.py  generate_dxf.py  generate_pdf.py  generate_readme_tables.py  offset_images.py  offset_pdf.py  page_manager.py  print.py  pyproject.toml  requirements.txt  size_convert.py  test_corner_edge_combinations.py  tutorial.md  utilities.py
assets/: card_size_config.json  gui_coordinates.json  layouts.json  sizing.json  template letter bridge.studio3  template_letter_poker_v1.studio3  template_letter_pokerhalf_v1.studio3  template_letter_standard_v1.studio3
cutting_templates/: a3-70mm_square-v1.studio3  a3-70mm_square-v2.studio3  a3-american_mini-v1.studio3  a3-american_mini-v2.studio3  a3-bridge-v1.studio3  a3-bridge-v2.studio3  a3-bridge_square-v1.studio3  a3-bridge_square-v2.studio3  a3-bridge_square-v3.studio3  a3-business-v1.studio3  a3-business-v2.studio3  a3-catan-v1.studio3  a3-catan-v2.studio3  a3-credit-v1.studio3  a3-credit-v2.studio3  a3-domino-v1.studio3  a3-domino-v2.studio3  a3-domino_square-v1.studio3  a3-domino_square-v2.studio3  a3-domino_square-v3.studio3  a3-euro_business-v1.studio3  a3-euro_business-v2.studio3  a3-euro_mini-v1.studio3  a3-euro_mini-v2.studio3  a3-japanese-v1.studio3  (+283 more)
(+675 files in other folders)
